bug fix to get dr go/no-go

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -440,9 +440,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-07 18:51:57,374 - dsaStore - INFO - {\"mjd\": 60041.78608072418, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"_check_host\", \"level\": \"info\", \"time\": \"2023-04-07T18:51:57.374559Z\", \"msg\": \"TODO: implement\"}\n",
-      "2023-04-07 18:51:57,375 - dsaStore - INFO - {\"mjd\": 60041.78608073684, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"_check_port\", \"level\": \"info\", \"time\": \"2023-04-07T18:51:57.375656Z\", \"msg\": \"TODO: implement\"}\n",
-      "2023-04-07 18:51:57,377 - dsaStore - INFO - {\"mjd\": 60041.7860807508, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"c-tor\", \"level\": \"info\", \"time\": \"2023-04-07T18:51:57.376862Z\", \"msg\": \"DsaStore created\"}\n"
+      "2023-04-11 00:44:27,100 - dsaStore - INFO - {\"mjd\": 60045.03086920371, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"_check_host\", \"level\": \"info\", \"time\": \"2023-04-11T00:44:27.099134Z\", \"msg\": \"TODO: implement\"}\n",
+      "2023-04-11 00:44:27,103 - dsaStore - INFO - {\"mjd\": 60045.030869255555, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"_check_port\", \"level\": \"info\", \"time\": \"2023-04-11T00:44:27.103674Z\", \"msg\": \"TODO: implement\"}\n",
+      "2023-04-11 00:44:27,106 - dsaStore - INFO - {\"mjd\": 60045.03086928516, \"proj\": \"dsa\", \"subsystem\": \"System\", \"app\": \"_\", \"version\": \"_\", \"module\": \"dsaStore\", \"function\": \"c-tor\", \"level\": \"info\", \"time\": \"2023-04-11T00:44:27.106232Z\", \"msg\": \"DsaStore created\"}\n"
      ]
     }
    ],
@@ -487,9 +487,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-07 18:51:57,719 - mnc.control - INFO - Loaded configuration for 8 x-engine host(s) running 4 pipeline(s) each\n",
-      "2023-04-07 18:51:57,720 - mnc.control - INFO - Supported recorder modes are: slow,fast,beam1,beam2,beam3,beam4\n",
-      "2023-04-07 18:51:57,721 - mnc.control - INFO - etcd server being used is: etcdv3service\n"
+      "2023-04-11 00:44:29,795 - mnc.control - INFO - Loaded configuration for 8 x-engine host(s) running 4 pipeline(s) each\n",
+      "2023-04-11 00:44:29,796 - mnc.control - INFO - Supported recorder modes are: slow,fast,beam1,beam2,beam3,beam4\n",
+      "2023-04-11 00:44:29,797 - mnc.control - INFO - etcd server being used is: etcdv3service\n"
      ]
     }
    ],
@@ -916,13 +916,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "status_dr = []\n",
     "for dr in recorders:\n",
-    "    summary = mcs.Client('drvs').read_monitor_point('summary')\n",
+    "    summary = mcs.Client(dr).read_monitor_point('summary')\n",
     "    t_age = time.Time.now().unix-summary.timestamp\n",
     "    status_dr.append((dr.lstrip('dr'), (summary.value == 'normal' and t_age < t_stale)))"
    ]
