Un-eat F engine status table panel.

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "pant = pn.param.ParamFunction(build_ant, lazy=True)\n",
     "pa = pn.param.ParamFunction(build_a, lazy=True)\n",
-    "pf = pn.param.ParamFunction(build_f, lazy=True)\n",
+    "pfeng = pn.param.ParamFunction(build_f, lazy=True)\n",
     "px = pn.param.ParamFunction(build_x, lazy=True)\n",
     "pdr = pn.param.ParamFunction(build_dr, lazy=True)"
    ]
@@ -681,7 +681,7 @@
     "tabs = pn.Tabs(('Cabling', df_cnf_pane),\n",
     "               ('Antennas', pant),\n",
     "               ('ARX', pa),\n",
-    "               ('F-engine', pf),\n",
+    "               ('F-engine', pfeng),\n",
     "               ('X-engine', px),\n",
     "               ('Data recorder', pdr),\n",
     "               dynamic=True, active=5)\n",
