reworking dashboard and feng control

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -643,7 +643,8 @@
     "    fnyy = flist[-1]\n",
     "    pane_antxx = pn.pane.PNG(display.Image(fnxx), width=400)\n",
     "    pane_antyy = pn.pane.PNG(display.Image(fnyy), width=400)\n",
-    "    pane_ant = pn.Row(pn.Column(pn.pane.Markdown(fnxx.split('/')[-1].rstrip('.png')), pane_antxx),\n",
+    "    pane_ant = pn.Row(pn.Row(pn.Column(pn.pane.Markdown(fnxx.split('/')[-1].rstrip('.png')), pane_antxx,\n",
+    "                                pn.pane.HTML(\"<h3><a href='http://obelix.rice.edu/~ai14/OVRO_LWA'>More detail at Rice</a></h3>\"))),\n",
     "                      pn.Column(pn.pane.Markdown(fnyy.split('/')[-1].rstrip('.png')), pane_antyy))\n",
     "    return pane_ant\n",
     "pf = pn.param.ParamFunction(build_anthealth, lazy=True)\n",
