updated dashboard for yaml antenna info

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -96,7 +96,8 @@
    "outputs": [],
    "source": [
     "#df_cnf_read = reading.read_antpos_etcd()\n",
-    "df_cnf_read = reading.read_antpos_xlsx()\n",
+    "#df_cnf_read = reading.read_antpos_xlsx()\n",
+    "df_cnf_read = reading.read_antpos_yaml()\n",
     "df_cnf = df_cnf_read[['snap2_hostname', 'snap2_chassis', 'snap2_location', 'pola_digitizer_channel',\n",
     "                      'polb_digitizer_channel', 'arx_address', 'pola_arx_channel', 'polb_arx_channel',\n",
     "                      'pola_fee', 'polb_fee', 'corr_num']]\n",
@@ -404,6 +405,7 @@
    "outputs": [],
    "source": [
     "#build_dr()\n",
+    "#build_a()\n",
     "#df_arx_pane\n",
     "#df_f_pane\n",
     "#df_x_pane\n",
@@ -423,17 +425,6 @@
    "source": [
     "#df_status = pd.DataFrame.from_dict(dd_statuses)\n",
     "#df_status.set_index('name', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "_, stats = con.status_fengine()"
    ]
   },
   {
@@ -709,13 +700,20 @@
    "source": [
     "mini_dashboard.servable(title='OVRO-LWA dashboard')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "development2",
+   "display_name": "development",
    "language": "python",
-   "name": "development2"
+   "name": "development"
   },
   "language_info": {
    "codemirror_mode": {
