--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "#df_cnf_read = reading.read_antpos_etcd()\n",
     "#df_cnf_read = reading.read_antpos_xlsx()\n",
-    "df_cnf_read = reading.read_antpos_yaml()\n",
+    "df_cnf_read = reading.read_antpos()\n",
     "df_cnf = df_cnf_read[['snap2_hostname', 'snap2_chassis', 'snap2_location', 'pola_digitizer_channel',\n",
     "                      'polb_digitizer_channel', 'arx_address', 'pola_arx_channel', 'polb_arx_channel',\n",
     "                      'pola_fee', 'polb_fee', 'corr_num']]\n",
