plot_autocor.py will push bad and list to etcd

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -704,9 +704,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "development",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "development"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
