adding selfcorr ant flags to table. updating plot location for ant health

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -24,7 +24,7 @@
     "from lwautils import lwa_arx\n",
     "from lwautils import TimeoutException\n",
     "from lwa_antpos import reading, mapping, lwa_df\n",
-    "from mnc import mcs, common, control\n",
+    "from mnc import mcs, common, control, anthealth\n",
     "import dsautils.cnf as cnf\n",
     "from dsautils import dsa_store\n",
     "from lwa352_pipeline_control import Lwa352PipelineControl, Lwa352CorrelatorControl\n",
@@ -278,14 +278,24 @@
     "#    _, stats = con.status_fengine()\n",
     "#    delays = stats['snap02']['delay']\n",
     "\n",
+    "    badants = anthealth.get_badants('selfcorr')\n",
+    "    badants_a = [b.rstrip(\"A\") for b in badants[1]]\n",
+    "    badants_b = [b.rstrip(\"B\") for b in badants[1]]\n",
+    "    flag_selfcorr_a = [mapping.correlator_to_antname(i) in badants_a\n",
+    "                       for i in range(len(flags))]\n",
+    "    flag_selfcorr_b = [mapping.correlator_to_antname(i) in badants_b\n",
+    "                       for i in range(len(flags))]\n",
+    "\n",
     "    ant_flags = [(mapping.correlator_to_antname(i),\n",
     "                  i, \n",
     "                  lwa_df.loc[mapping.correlator_to_antname(i)].online,\n",
-    "                  ~flags[i].all())\n",
+    "                  ~flags[i].all(),\n",
+    "                 mapping.correlator_to_antname(i) in badants_a,\n",
+    "                 mapping.correlator_to_antname(i) in badants_b)\n",
     "                 for i in range(len(flags))]\n",
     "\n",
     "    \n",
-    "    df_ant = pd.DataFrame(ant_flags, columns=['name', 'corr_num', 'online', 'MS unflagged'])\n",
+    "    df_ant = pd.DataFrame(ant_flags, columns=['name', 'corr_num', 'online', 'MS unflagged', 'Selfcorr A bad', 'Selfcorr B bad'])\n",
     "    df_ant.set_index('name', inplace=True)\n",
     "    df_ant.sort_index(inplace=True)\n",
     "    df_ant_pane = pn.widgets.Tabulator(df_ant, layout='fit_data_table', pagination='remote',\n",
@@ -629,7 +639,7 @@
     "\n",
     "# TODO: get latest pngs\n",
     "def build_anthealth():\n",
-    "    flist = sorted(glob.glob('/data10/pipeline/anthealth/*png'))\n",
+    "    flist = sorted(glob.glob('/lustre/pipeline/lastnight/*/fig/*png'))\n",
     "    fnxx = flist[-2]\n",
     "    fnyy = flist[-1]\n",
     "    pane_antxx = pn.pane.PNG(display.Image(fnxx), width=400)\n",
@@ -700,13 +710,20 @@
    "source": [
     "mini_dashboard.servable(title='OVRO-LWA dashboard')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "development",
    "language": "python",
-   "name": "python3"
+   "name": "development"
   },
   "language_info": {
    "codemirror_mode": {
