--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -358,7 +358,6 @@
     "\n",
     "#    fn = f'{path}/fig/tmp/{antnum:03}.jpg'\n",
     "    fns = glob.glob(f'{path}/fig/*png')\n",
-    "    print(fns)\n",
     "    if len(fns):\n",
     "        fn = fns[antnum]  # TODO: make this select antenna plot from sorted list\n",
     "        plot_pane = pn.pane.PNG(fn, width=700)\n",
@@ -623,10 +622,10 @@
    "outputs": [],
    "source": [
     "ant_filter = pn.widgets.IntInput(name='Select ant to display antenna autocorr plot',\n",
-    "                                 placeholder='1,2,3,4,5,6,7,8,9,10,...,352', value=None)\n",
-    "directories = sorted(glob.glob('/lustre/pipeline/lastnight/*'))\n",
+    "                                 placeholder='1,2,3,4,5,6,7,8,9,10,...,352', value=1)\n",
+    "directories = list(reversed(sorted(glob.glob('/lustre/pipeline/lastnight/*'))))\n",
     "directory_filter = pn.widgets.Select(name='Select date to display antenna autocorr plot',\n",
-    "                                     options=directories, value=directories[-1])\n",
+    "                                     options=directories, value=directories[0])\n",
     "dr_filter = pn.widgets.Select(name='Select data recorder to display data',\n",
     "                              options=sorted(list(set(['drvs'+str(num) for num in con.drvnums]))))\n",
     "\n",
