dashboard displays dynspec plots. script now will save normalized spectra too. still need to integrate that with dashboard

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -352,14 +352,17 @@
     "    return df_d_pane\n",
     "\n",
     "\n",
-    "def build_plot(path, antnum):\n",
+    "def build_plot(path, antnum, pol):\n",
     "    if antnum is None:\n",
     "        return \"No antnum selected\"\n",
     "\n",
     "#    fn = f'{path}/fig/tmp/{antnum:03}.jpg'\n",
-    "    fns = glob.glob(f'{path}/fig/*png')\n",
+    "    fns = glob.glob(f'{path}/fig/tmp/*png')\n",
+    "    fns = [fn for fn in fns if f'LWA{antnum:03d}_{pol}_dynspec.png' in fn]\n",
     "    if len(fns):\n",
-    "        fn = fns[antnum]  # TODO: make this select antenna plot from sorted list\n",
+    "        if len(fns) > 1:\n",
+    "            print(f\"more than one file found: {fns}. Taking first.\")\n",
+    "        fn = fns[0]\n",
     "        plot_pane = pn.pane.PNG(fn, width=700)\n",
     "    else:\n",
     "        plot_pane = f'No f-eng summary plot for {antnum}'\n",
@@ -402,10 +405,10 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "scrolled": true
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TODO: potentially expose the calibration state here\n",
     "# con.configure_xengine(recorders='dr3')\n",
@@ -621,11 +624,13 @@
    },
    "outputs": [],
    "source": [
-    "ant_filter = pn.widgets.IntInput(name='Select ant to display antenna autocorr plot',\n",
+    "ant_filter = pn.widgets.IntInput(name='LWA antenna name?',\n",
     "                                 placeholder='1,2,3,4,5,6,7,8,9,10,...,352', value=1)\n",
     "directories = list(reversed(sorted(glob.glob('/lustre/pipeline/lastnight/*'))))\n",
-    "directory_filter = pn.widgets.Select(name='Select date to display antenna autocorr plot',\n",
+    "directory_filter = pn.widgets.Select(name='Date of autocorr data?',\n",
     "                                     options=directories, value=directories[0])\n",
+    "pol_filter = pn.widgets.Select(name='Pol of autocorr data?',\n",
+    "                                     options=['XX', 'YY'], value='XX')\n",
     "dr_filter = pn.widgets.Select(name='Select data recorder to display data',\n",
     "                              options=sorted(list(set(['drvs'+str(num) for num in con.drvnums]))))\n",
     "\n",
@@ -649,7 +654,8 @@
     "# TODO: make these lazy evaluated functions\n",
     "plot_spec_pane = pn.Column(pn.Column(directory_filter),\n",
     "                           pn.Column(ant_filter),\n",
-    "                           pn.panel(pn.bind(build_plot, directory_filter, ant_filter)), width=800)\n",
+    "                           pn.Column(pol_filter),\n",
+    "                           pn.panel(pn.bind(build_plot, directory_filter, ant_filter, pol_filter)), width=800)\n",
     "pane_data = pn.Column(dr_filter, pn.panel(pn.bind(build_data, dr_filter)), width=800)\n",
     "\n",
     "# TODO: get latest pngs\n",
@@ -660,7 +666,8 @@
     "    pane_antxx = pn.pane.PNG(display.Image(fnxx), width=400)\n",
     "    pane_antyy = pn.pane.PNG(display.Image(fnyy), width=400)\n",
     "    pane_ant = pn.Row(pn.Row(pn.Column(pn.pane.Markdown(fnxx.split('/')[-1].rstrip('.png')), pane_antxx,\n",
-    "                                pn.pane.HTML(\"<h3><a href='http://obelix.rice.edu/~ai14/OVRO_LWA'>More detail at Rice</a></h3>\"))),\n",
+    "                                pn.pane.HTML(\"<h3><a href='http://obelix.rice.edu/~ai14/OVRO_LWA'>More detail at Rice</a></h3>\"),\n",
+    "                                pn.pane.HTML(\"<h3><a href='https://galileo.sese.asu.edu/ovro-cd/nightly_movies/'>All-sky movies at ASU</a></h3>\"))),\n",
     "                      pn.Column(pn.pane.Markdown(fnyy.split('/')[-1].rstrip('.png')), pane_antyy))\n",
     "    return pane_ant\n",
     "pf = pn.param.ParamFunction(build_anthealth, lazy=True)\n",
@@ -725,13 +732,6 @@
    "source": [
     "mini_dashboard.servable(title='OVRO-LWA dashboard')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
