adding link to RFI movies in data pane

--- a/notebooks/LWA_dashboard.ipynb
+++ b/notebooks/LWA_dashboard.ipynb
@@ -690,7 +690,9 @@
     "    pg = pn.pane.HTML(display.HTML(filename=fn), height=1200, width=1000)\n",
     "    return pn.Column(pg)\n",
     "\n",
-    "pane_gains = pn.Column(gains_filter, pn.panel(pn.bind(build_gains, gains_filter)), width=800)\n"
+    "pane_gains = pn.Column(gains_filter, pn.panel(pn.bind(build_gains, gains_filter)), width=800)\n",
+    "now = time.Time.now().datetime\n",
+    "pane_RFI = pn.pane.GIF(f'/data10/pipeline/RFI_video/{now.year}{now.month:02d}{now.day-1:02d}.gif', width=800)"
    ]
   },
   {
@@ -713,6 +715,7 @@
     "data_tabs = pn.Tabs(('Data recorder', pane_data),\n",
     "                    ('Low Frequency Sky', pane_lfs),\n",
     "                    ('Plot spectrum', plot_spec_pane),\n",
+    "                    ('RFI movie', pane_RFI),\n",
     "                    ('Antenna flags', pf),\n",
     "                    ('Gains', pane_gains),\n",
     "                    dynamic=True, active=0)\n",
@@ -732,6 +735,20 @@
    "source": [
     "mini_dashboard.servable(title='OVRO-LWA dashboard')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
